02-developers/base/petclinic/02-deploymentconfig.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    app: petclinic
    app.kubernetes.io/component: petclinic
    app.kubernetes.io/instance: petclinic
    app.kubernetes.io/name: java
    app.kubernetes.io/part-of: petclinic-demo
    app.openshift.io/runtime: java
    app.openshift.io/runtime-version: "8"
  name: petclinic
spec:
  replicas: 1
  revisionHistoryLimit: 5
  selector:
    app: petclinic
    deploymentconfig: petclinic
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      labels:
        app: petclinic
        deploymentconfig: petclinic
    spec:
      containers:
      - name: petclinic
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 8443
          protocol: TCP
        - containerPort: 8778
          protocol: TCP
        resources:
          requests:
            cpu: 250m 
            memory: 512Mi 
          limits:
            cpu: '1' 
            memory: 512Mi 
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 15
          timeoutSeconds: 2
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 40
          timeoutSeconds: 2
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccountName: petclinic
      terminationGracePeriodSeconds: 30
  triggers:
    - type: ImageChange
      imageChangeParams:
        containerNames:
          - petclinic
        from:
          kind: ImageStreamTag
          namespace: cicd
          name: 'petclinic:latest'
  test: false
